2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (pk_print_version): Change jemarch for "the poke
	authors".
	* doc/poke.texi: Likewise.

2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev.h (IOS_FILE_HANDLER_NORMALIZE): Fix logic.

2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_map): Fix subpassing on the map
	offset when it is on the left side of an assignment.

2020-07-13  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios-dev-file.c (ios_dev_file_handler_normalize): Move
	the file name normalization logic from here ...
	* libpoke/ios-dev.h (IOS_FILE_HANDLER_NORMALIZE): ... to here.

2020-07-13  Jose E. Marchesi  <jemarch@gnu.org>

	* .x-sc_bindtextdomain: New file.
	* testsuite/poke.mi-json/Makefile.am: New file.
	* testsuite/poke.mi-json/mi-json.c: Likewise.
	* testsuite/poke.mi-json/json.exp: Likewise.
	* configure.ac: AC_CONFIG testsuite/poke.mi-json/Makefile.
	* testsuite/Makefile.am (SUBDIRS): Add poke.mi-json.
	* poke/pk-mi-json.c (pk_mi_json_to_msg): Do not print tokener
	diagnostics.
	* HACKING (Test Suite): Update.

2020-07-13  Bruno Haible  <bruno@clisp.org>

	Fix build failure during "make check".
	* bootstrap.conf (libpoke_modules): Add vasprintf-posix.
	(ACLOCAL_FLAGS): New variable.
	* Makefile.am (ACLOCAL_AMFLAGS): Add -I options for the second and third
	gnulib-tool invocation.
	* configure.ac: Invoke libpoke_EARLY, gui_EARLY, libpoke_INIT, gui_INIT.

2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/Makefile.am (EXTRA_DIST): Add libpoke.
	* testsuite/poke.libpoke/libpoke.exp: New file.
	* testsuite/poke.libpoke/Makefile.am: Likewise.
	* testsuite/poke.libpoke/values.c: Likewise.
	* testsuite/poke.libpoke/term-if.h: Likewise.
	* configure.ac: AC_CONFIG testsuite/libpoke/Makefile.
	* HACKING (Unit Tests): New section.

2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_FORGET): Define.
	* libpoke/pkl-tab.y (BUILTIN_FORGET): Define.