@@ -1,5 +1,12 @@
 2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* testsuite/poke.mi-json/mi-json.c (pk_fatal): Use EXIT_FAILURE
+	instead of hardcoded 1.
+	* libpoke/ios-dev.h (IOS_FILE_HANDLER_NORMALIZE): Replace tabs
+	with whitespaces.
+
+2020-07-14  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/poke.c (pk_print_version): Change jemarch for "the poke
 	authors".
 	* doc/poke.texi: Likewise.
